--- a/Views/Order/AirIn_List.cshtml
+++ b/Views/Order/AirIn_List.cshtml
@@ -111,7 +111,7 @@
                                 </select>
                             </td>
                             <td>
-                                <select class="easyui-combobox combobox_width value" id="is_clearance" panelheight="auto" name="is_clearance"></select>
+                                <select class="easyui-combobox combobox_width value is_check" panelheight="auto" name="is_clearance"></select>
                             </td>
                         </tr>
 
