--- a/Views/Order/LandIn_List.cshtml
+++ b/Views/Order/LandIn_List.cshtml
@@ -109,7 +109,7 @@
                                 </select>
                             </td>
                             <td>
-                                <select class="easyui-combobox combobox_width value" id="is_clearance" panelheight="auto" name="is_clearance"></select>
+                                <select class="easyui-combobox combobox_width is_check"   panelheight="auto" name="is_clearance"></select>
                             </td>
                         </tr>
 
