--- a/Views/Order/LandOut_List.cshtml
+++ b/Views/Order/LandOut_List.cshtml
@@ -110,7 +110,7 @@
                                 </select>
                             </td>
                             <td>
-                                <select class="easyui-combobox combobox_width value" id="is_clearance" panelheight="auto" name="is_clearance"></select>
+                                <select class="easyui-combobox combobox_width is_check"  panelheight="auto" name="is_clearance"></select>
                             </td>
                         </tr>
 
