--- a/Views/Order/SeaOut_List.cshtml
+++ b/Views/Order/SeaOut_List.cshtml
@@ -1,6 +1,6 @@
 ﻿<div class="ibox-content">
     <div class="table-responsive">
-        <table id="datagrid" class="easyui-datagrid" title="海运出口列表" style="height:auto;min-height:500px;max-height:800px"
+        <table id="datagrid" class="easyui-datagrid" title="海运出口" style="height:auto;min-height:500px;max-height:800px"
                data-options=" rownumbers:true,
                                    url: '/Order/GetData',
                                    queryParams:{BUSITYPE:20},
