--- a/Views/Order/SpecialSupervision_List.cshtml
+++ b/Views/Order/SpecialSupervision_List.cshtml
@@ -1,6 +1,6 @@
 ﻿<div class="ibox-content">
     <div class="table-responsive">
-        <table id="datagrid" class="easyui-datagrid" title="特殊监管列表" style="height:auto;min-height:500px;max-height:800px"
+        <table id="datagrid" class="easyui-datagrid" title="特殊监管" style="height:auto;min-height:500px;max-height:800px"
                data-options=" rownumbers:true,
                                    url: '/Order/GetData',
                                    queryParams:{TYPE:'SpecialSupervision'},
