--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -21,8 +21,22 @@
     <link href="~/Content/iconfont/iconfont.css" rel="stylesheet" />
     @Scripts.Render("~/easyui/js")
     <script src="~/js/commondata.js"></script>
+    <script type="text/javascript">
+        //function closes() {
+        //    $("#Loading").fadeOut("normal", function () {
+        //        $(this).remove();
+        //    });
+        //}
+        //var pc;
+        //$.parser.onComplete = function () {
+        //    if (pc) clearTimeout(pc);
+        //    pc = setTimeout(closes, 1000);
+        //}
+    </script>
+
 </head>
 <body>
+    @*<div id='Loading' style="position:absolute;z-index:1000;top:0px;left:0px;width:100%;height:100%;background:#DDDDDB url('style/images/bodybg.jpg');text-align:center;padding-top: 20%;"><h1><font color="#15428B">加载中···</font></h1></div>*@
     <div class="container">
         <div style="margin:10px 0px">
             <img src="~/Images/fld_logo.png" />
@@ -83,6 +97,10 @@
             </ul>
         </div>
 
+        <div style="text-align:right;height:30px;line-height:30px;">
+            @ViewData["crumb"]
+        </div>
+
     </div>
     <div class="container" style="min-height:600px;">
         @RenderSection("featured", required: false)
@@ -90,7 +108,7 @@
             @RenderBody()
         </section>
     </div>
-    <div style="background-color: #CFDEFF; height: 70px;width:100%;margin-top:5px; ">
+    <div style="background-color: #CFDEFF; height: 70px;width:100%;margin-top:10px; ">
         <div class="container">
             <table class="table" style="margin-bottom:0px">
                 <tr>
